--- a/Src/index.html
+++ b/Src/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SeniCheck</title>
     <link rel="stylesheet" href="../Css/Styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+    <!-- Cuadro de inicio de sesion -->
+
     <div class="container mt-5">
         <div class="card"> <!-- Cuadro contenedor -->
-            <h1 class="card-title" style="color: #00304D;">¡Bienvenido!, inicia sesión para usar <span
-                    style="color: #39A900;">SeniCheck</span></h1>
+            <h1 class="card-title" style="color: #00304D;">¡Bienvenido!, inicia sesión para usar <span style="color: #39A900;">SeniCheck</span></h1>
             <form>
                 <div class="form-floating mb-3">
                     <select class="form-select" id="inputGroupSelect01">
@@ -33,7 +36,7 @@
                     <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                     <label for="floatingPassword">Contraseña</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                <button type="submit" class="btn btn-primary" >Iniciar Sesión</button>
             </form>
         </div>
     </div>
