--- a/Src/index.html
+++ b/Src/index.html
@@ -6,40 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SeniCheck</title>
     <link rel="stylesheet" href="../Css/Styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
     <!-- Cuadro de inicio de sesion -->
-
-    <div class="container mt-5">
-        <div class="card"> <!-- Cuadro contenedor -->
-            <h1 class="card-title" style="color: #00304D;">¡Bienvenido!, inicia sesión para usar <span style="color: #39A900;">SeniCheck</span></h1>
+    <!--
+    <div class="container mt-1 d-flex justify-content-center" id="Login">
+        <div class="card p-4">
+            <h1 class="card-title" style="color: #00304D;"><strong>¡Bienvenido!, inicia sesión para usar <span
+                    style="color: #39A900;">SeniCheck</span></strong>
+            </h1>
             <form>
                 <div class="form-floating mb-3">
-                    <select class="form-select" id="inputGroupSelect01">
-                        <option disabled selected hidden>Selecciona tu tipo de rol</option>
+                    <select class="form-select" id="selectRol">
+                        <option disabled selected hidden>
+                        </option>
                         <option value="1">Bienestar al aprendiz</option>
                         <option value="2">Coordinador</option>
                         <option value="3">Instructor</option>
                     </select>
+                    <label for="floatingSelectGrid"><strong>Selecciona tu tipo de rol</strong></label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Correo electronico</label>
+                    <input type="email" class="form-control" id="loginInput">
+                    <label for="floatingInput"><strong>Correo electrónico</strong></label>
                 </div>
                 <div class="form-floating mb-3">
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Contraseña</label>
-                </div>
-                <button type="submit" class="btn btn-primary" >Iniciar Sesión</button>
+                    <input type="password" class="form-control" id="loginInput">
+                    <label for="floatingPassword"><strong>Contraseña</strong></label>
+                </div> 
+                <button type="submit" class="btn btn-primary" id="btnLogin"><strong>Iniciar Sesión</strong></button>
             </form>
         </div>
     </div>
+    -->
+
+    <!-- Cuadro de inicio de sesion -->
+    <div class="container mt-1 d-flex justify-content-center" id="Login">
+        <div class="card p-4">
+            <h1 class="card-title" style="color: #00304D;"><strong>¡Bienvenido!, inicia sesión para usar <span
+                    style="color: #39A900;">SeniCheck</span></strong>
+            </h1>
+            <form>
+                <div class="form-floating mb-3">
+                    <select class="form-select" id="selectRol">
+                        <option disabled selected hidden>
+                        </option>
+                        <option value="1">Bienestar al aprendiz</option>
+                        <option value="2">Coordinador</option>
+                        <option value="3">Instructor</option>
+                    </select>
+                    <label for="floatingSelectGrid"><strong>Selecciona tu tipo de rol</strong></label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="loginInput">
+                    <label for="floatingInput"><strong>Correo electrónico</strong></label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="password" class="form-control" id="loginInput">
+                    <label for="floatingPassword"><strong>Contraseña</strong></label>
+                </div>
+                <button type="submit" class="btn btn-primary" id="btnLogin"><strong>Iniciar Sesión</strong></button>
+            </form>
+        </div>
 
     <script src="app.js"></script>
     <script src="Model/Model.js"></script>
