Se hace la pantalla principal y se crea card de ficha

--- a/Src/index.html
+++ b/Src/index.html
@@ -74,13 +74,57 @@
         </div>
     </template>
 
-    <!-- Cuadro de pantalla de inicio Instructor -->
-    <div class="container mt-0.2 d-flex justify-content-center">
-        <div class="card p-4" id="containerPrincipal">
-            <!-- Encabezado de pagina principal -->
-            <h1 class="card-title" style="color: #00304D;"><strong>Bienvenido de nuevo, <span
-                        style="color: #39A900;">Nombre de usuario</span> ¿Qué deseas realizar el dia de hoy?</strong>
-            </h1>
+    <template>
+        <!-- Cuadro de pantalla de inicio Instructor -->
+        <div class="container mt-0.2 d-flex justify-content-center">
+            <div class="card p-4" id="containerPrincipal">
+                <!-- Encabezado de pagina principal -->
+                <h1 class="card-title" style="color: #00304D;"><strong>Bienvenido de nuevo, <span
+                            style="color: #39A900;">Nombre de usuario</span> ¿Qué deseas realizar el dia de
+                        hoy?</strong>
+                </h1>
+
+                <!-- Barra de navegacion -->
+                <form>
+                    <div class="search-container">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-search" viewBox="0 0 16 16">
+                            <path
+                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                        </svg>
+                        <input class="form-control me-2" type="search" placeholder="Realizar busqueda"
+                            aria-label="Search" id="searchBar">
+                    </div>
+                </form>
+
+                <!-- Botones de navegacion -->
+                <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
+                    <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Vizualizar mis
+                            fichas</strong></button>
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver mis
+                            notificaciones</strong></button>
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan de
+                            seguimiento</strong></button>
+                    <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas
+                            ayuda?</strong></button>
+                </div>
+
+                <!-- Pie de pagina -->
+                <h6><strong style="color: #c7c7c7;" id="footer">2024 - Servicio Nacional de Aprendizaje SENA</strong>
+                </h6>
+
+            </div>
+
+        </div>
+    </template>
+
+    <div class="container d-flex justify-content-evenly" id="workArea">
+        <!-- Menú navegación -->
+        <div class="card p-2" id="optionMenu">
+            <!-- Encabezado de menú lateral -->
+            <div class="d-flex justify-content-center">
+                <img src="../Resources/Img/SenaLogo.png" alt="" id="SenaLogo">
+            </div>
 
             <!-- Barra de navegacion -->
             <form>
@@ -90,22 +134,74 @@
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
                     </svg>
-                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search" id="searchBar">
+                    <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search"
+                        id="searchBar">
                 </div>
             </form>
 
+
             <!-- Botones de navegacion -->
-            <div class="d-grid gap-2 d-md-flex justify-content-center" id="btnNavegation">
-                <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Vizualizar mis fichas</strong></button>
-                <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver mis notificaciones</strong></button>
-                <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas ayuda?</strong></button>
+            <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
+                <div id="btnNavegationMenu">
+                    <button class="btn btn-primary" type="button" id="btnCheckCourse"><strong>Vizualizar mis
+                            fichas</strong></button>
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Ver mis
+                            notificaciones</strong></button>
+                    <button class="btn btn-primary" type="button" id="btnCheckNotifications"><strong>Plan de
+                            seguimiento</strong></button>
+                    <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas
+                            ayuda?</strong></button>
+                </div>
             </div>
-            <!-- Pie de pagina -->
-             <h5><strong style="color: #c7c7c7;">2024 - Servicio Nacional de Aprendizaje SENA</strong></h5>
 
         </div>
 
+        <!-- Area de trabajo -->
+        <div class="card p-2 w-100" id="containerPrincipal">
+            <!-- Encabezado de pagina principal -->
+            <h1 class="card-title" style="color: #00304D;"><strong>Te encuentras visualizando tu listado de <span
+                        style="color: #39A900;">fichas</span>:</strong>
+            </h1>
+
+            <!-- Subencabezado
+            <div class="container d-flex flex-nowrap">
+                <p class="card-title" style="color: #00304D; font-size:larger;"><strong>Porfavor, selecciona una ficha:</strong>
+                </p>
+            </div>
+            <div class="line"></div> -->
+
+            <!-- Barra de navegacion -->
+            <form>
+                <div class="search-container">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-search" viewBox="0 0 16 16">
+                        <path
+                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0" />
+                    </svg>
+                    <input class="form-control me-2" type="search" placeholder="Realizar busqueda" aria-label="Search"
+                        id="searchBar">
+                </div>
+            </form>
+
+            <!-- Tabla de fichas -->
+            <div class="container" id="containerInteractiveCourseCard">  
+                <div class="d-flex justify-content-between align-items-center" id="interactiveCourseCard">
+                    <div class="d-flex align-items-center">
+                        <img src="../Resources/Img/FolderIcon.png" alt="..." id="folderIcon" class="mr-2">
+                        <h4 style="color: #00304D;"><strong>Ficha 2823217</strong></h4>
+                    </div>
+                    <button type="button" class="btn btn-primary" id="viewMoreOptionBtn"><strong>Ver opciones</strong></button>
+                </div>
+            </div>
+
+            <!-- Pie de pagina -->
+            <h6><strong style="color: #c7c7c7;" id="footer">2024 - Servicio Nacional de Aprendizaje SENA</strong>
+            </h6>
+
+        </div>
     </div>
+
+
 
     <script src="app.js"></script>
     <script src="Model/Model.js"></script>
@@ -113,11 +209,11 @@
     <script src="Controller/Controler.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous">
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+        </script>
 
 </body>
 
