--- a/Src/index.html
+++ b/Src/index.html
@@ -186,17 +186,17 @@
 
                 <!-- Tarjeta dinámica -->
                 <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
-                    <div class="flex-shrink-0">
-                    </div>
+
+                    <img src="../Resources/Img/FolderIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
                     <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Ficha 2823217</strong>
-                    <div class="flex-grow-1"> <!-- Añadido ms-2 para margen a la izquierda -->
+                    <div class="flex-grow-1">
                     </div>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#optionModal"
-                        id="moreOptionBtn">
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#optionModal" id="moreOptionBtn">
                         <strong>Ver opciones</strong>
                     </button>
                 </div>
-                
+
             </div>
 
             <!-- Modal de opciones -->
@@ -206,19 +206,18 @@
                     <div class="modal-content">
                         <div class="modal-header">
                             <h1 class="card-title" style="color: #00304D;">
-                                <strong>Por favor, selecciona una <span
-                                        style="color: #39A900;">opción</span>:</strong>
+                                <strong>Por favor, selecciona una <span style="color: #39A900;">opción</span>:</strong>
                             </h1>
                         </div>
                         <div class="modal-body">
                             <div class="d-flex" id="btnNavegation">
-                                <button class="btn btn-primary mb-2" type="button"
-                                    id="btnCheckCourse"><strong>Registrar asistencia</strong></button>
+                                <button class="btn btn-primary mb-2" type="button" id="btnCheckCourse"><strong>Registrar
+                                        asistencia</strong></button>
                                 <button class="btn btn-primary mb-2" type="button"
                                     id="btnCheckNotifications"><strong>Historial de
                                         asistencia</strong></button>
-                                <button class="btn btn-primary" type="button"
-                                    id="btnCheckUserManual"><strong>¿Necesitas ayuda?</strong></button>
+                                <button class="btn btn-primary" type="button" id="btnCheckUserManual"><strong>¿Necesitas
+                                        ayuda?</strong></button>
                             </div>
                         </div>
                         <div class="modal-footer justify-content-center">
